Safari overflow bug

--- a/resources/sass/pages/_blog-post.scss
+++ b/resources/sass/pages/_blog-post.scss
@@ -1,3 +1,3 @@
 .prose a {
-    overflow-wrap: anywhere;
+    word-break: break-all;
 }
